--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dio: ^5.4.3
   flutter:
     sdk: flutter
+  flutter_app_installer: ^1.0.0
   path_provider: ^2.1.3
   url_launcher: ^6.3.0
   version: ^3.0.2
